# app/Models/User.php
@@ -6,10 +6,27 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Laravel\Passport\HasApiTokens;
+use OpenApi\Annotations as OA;
+
+/** 
+ * Class User.
+ * 
+ * @author JamesWL <james.422023009@civitas.ukrida.ac.id>
+ * 
+ * @OA\Schema(
+ *     description="User model",
+ *     title="User model",
+ *     required={"name", "email", "password"},
+ *     @OA\Xml(
+ *         name="User"
+ *     )
+ * )
+ */
 
 class User extends Authenticatable
 {
-    use HasFactory, Notifiable;
+    use HasFactory, Notifiable, HasApiTokens;
 
     /**
      * The attributes that are mass assignable.
